# doc2data

./: LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
doc2data/: __about__.py  __init__.py  pdf.py  utils.py
doc2data/experimental/: base_processors.py  ocr.py  preprocessing.py  task_processors.py  trainers.py  utils.py
docs/: api_reference.md  changelog.md  getting_started.md  guides.md  requirements.txt
tests/: __init__.py
