[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2data"
description = 'Integrated document processing with machine learning.'
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = [
  "document processing",
  "machine learning",
  "deep learning",
  "pdf parsing",
]
authors = [
  { name = "Sergej Levich", email = "sergej.levich@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/serge724/doc2data#readme"
Issues = "https://github.com/serge724/doc2data/issues"
Source = "https://github.com/serge724/doc2data"

[tool.hatch.version]
path = "doc2data/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]
