[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2data"
description = 'Integrated document processing with machine learning.'
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = [
  "document processing",
  "machine learning",
  "deep learning",
  "pdf parsing",
]
authors = [
  { name = "Sergej Levich", email = "sergej.levich@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy >= 1.21.6",
  "pandas >= 1.3.5",
  "pillow >= 9.0.0",
  "pymupdf >= 1.19.6",
  "tqdm >= 4.64.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "http://doc2data.readthedocs.io/"
Issues = "https://github.com/serge724/doc2data/issues"
Source = "https://github.com/serge724/doc2data"

[tool.hatch.version]
path = "doc2data/__init__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.hatch.envs.docs]
type = "virtual"
detached = true
dependencies = [
  "mkdocs==1.3.1",
  "mkdocstrings-python==0.7.1",
  "markdown-include==0.7.0",
]
